Fix Problems with Liquidations Report in admin Panel
Action Column should only be invisible or empty only if the status is pending
If the status is successful or failed... Nothing is be displayed in action column
Swapped out the kycType column for the reason column.
Reason column provides crucial info while KycType info is derivable from pic

--- a/src/app/modules/admin/liquidation-requests/liquidation-requests.component.scss
+++ b/src/app/modules/admin/liquidation-requests/liquidation-requests.component.scss
@@ -11,6 +11,12 @@
     justify-content: center;
   }
 
+  h2 {
+    color: var(--gold-color);
+    margin: 30px 0;
+  }
+
+
   .search-bar {
     margin: 30px 0px;
     background-color: #E6E7E8;
